tests/type_errors/generic_take_times_int.nos
# expect_error: Type error
# Take returns a list, multiplying a list by Int is a type error
f(xs) = xs.take(2) * 3
main() = f([1, 2, 3])
